--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,4 @@
-@import url("./font.css");
+@import url("../style/font.css");
 
 /* BASE COLOR */
 :root {
@@ -70,7 +70,7 @@ button {
   height: 50px;
   margin-left: 1em;
   margin-bottom: 0.5em;
-  background-image: url(./assets/computer.png);
+  background-image: url(../assets/computer.png);
   background-size: 50px 50px;
 }
 
@@ -81,7 +81,7 @@ button {
   height: 50px;
   margin-left: 1em;
   margin-bottom: 0.5em;
-  background-image: url(./assets/briefcase.png);
+  background-image: url(../assets/briefcase.png);
   background-size: 50px 50px;
 }
 
@@ -92,7 +92,7 @@ button {
   height: 50px;
   margin-left: 1em;
   margin-bottom: 0.5em;
-  background-image: url(./assets/documents.png);
+  background-image: url(../assets/documents.png);
   background-size: 50px 50px;
 }
 
@@ -103,7 +103,7 @@ button {
   height: 50px;
   margin-left: 0.7em;
   margin-bottom: 0.5em;
-  background-image: url(./assets/trash.png);
+  background-image: url(../assets/trash.png);
   background-size: 50px 50px;
 }
 
@@ -140,7 +140,7 @@ button {
   width: 20px;
   height: 20px;
   margin-right: 0.5em;
-  background-image: url(./assets/windows.png);
+  background-image: url(../assets/windows.png);
   background-size: 20px 20px;
 }
 
@@ -150,7 +150,7 @@ button {
   width: 25px;
   height: 25px;
   margin-right: 1em;
-  background-image: url(./assets/windows_slanted.png);
+  background-image: url(../assets/windows_slanted.png);
   background-size: 25px 25px;
 }
 
@@ -159,7 +159,7 @@ button {
   display: inline-block;
   width: 22px;
   height: 22px;
-  background-image: url(./assets/time_date.png);
+  background-image: url(../assets/time_date.png);
   background-size: 22px 22px;
   margin-right: 1em;
 }
