--- a/style/modal.css
+++ b/style/modal.css
@@ -1,4 +1,4 @@
-.window-container {
+.modal-container {
   position: fixed;
   top: 0;
   left: 0;
@@ -7,22 +7,9 @@
   display: none;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(27, 12, 12, 0.5);
 }
 
-.window {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 300px;
-  transform: translate(-50%, -50%);
-}
-
-.window-container.clicked {
+.clicked {
   display: block;
-}
-
-/* cursor: close button */
-.window .title-bar-controls button:nth-child(3) {
-  cursor: pointer;
 }
