--- a/style/index.css
+++ b/style/index.css
@@ -65,6 +65,26 @@ button {
   cursor: pointer;
 }
 
+/* startup */
+.startup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+.startup img {
+  width: 100%;
+  height: 100vh;
+  transition: width 2500ms ease-in-out;
+}
+
 /* icons */
 .icon {
   margin: 10px;
