[Feat] Add Taskbar-running-app(작업표시줄 실행중인 앱 표시)

--- a/style/index.css
+++ b/style/index.css
@@ -201,6 +201,13 @@ button {
   margin-right: 1em;
 }
 
+/* running-app */
+.taskbar-running-app button#run-app {
+  height: 32px;
+  font-size: 1em;
+  font-weight: normal;
+}
+
 /* clock */
 button#date-time {
   position: fixed;
