[Fix]Modify icons image & modal positioning

--- a/style/index.css
+++ b/style/index.css
@@ -59,7 +59,7 @@ button {
 }
 
 /* window */
-.window:not(.editor) {
+.window {
   /* centering window */
   position: absolute;
   top: 50%;
@@ -95,11 +95,18 @@ button {
 
 /* icons */
 .icon {
+  display: inline-block;
   margin: 10px;
 }
 
 .icon[class*="icon"] {
   cursor: pointer;
+}
+
+.icon-group {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .todo-icon strong,
@@ -116,7 +123,7 @@ button {
   display: inline-block;
   width: 50px;
   height: 50px;
-  margin-left: 1em;
+  margin-left: 0.7em;
   margin-bottom: 0.5em;
   background-image: url(../assets/computer.png);
   background-size: 50px 50px;
@@ -127,7 +134,7 @@ button {
   display: inline-block;
   width: 50px;
   height: 50px;
-  margin-left: 1em;
+  margin-left: 0.6em;
   margin-bottom: 0.5em;
   background-image: url(../assets/briefcase.png);
   background-size: 50px 50px;
@@ -139,7 +146,7 @@ button {
   width: 50px;
   height: 50px;
   margin-left: 1em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.7em;
   background-image: url(../assets/documents.png);
   background-size: 50px 50px;
 }
@@ -150,7 +157,7 @@ button {
   width: 50px;
   height: 50px;
   margin-left: 0.7em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.4em;
   background-image: url(../assets/trash.png);
   background-size: 50px 50px;
 }
