--- a/style/todo.css
+++ b/style/todo.css
@@ -9,7 +9,7 @@
   display: inline-block;
   width: 50px;
   height: 50px;
-  margin-left: 0.2em;
+  margin-left: 0;
   margin-bottom: 0.5em;
   background-image: url(../assets/write.png);
   background-size: 50px 50px;
