[Feat] Change paint app line color

--- a/style/paint-colors.css
+++ b/style/paint-colors.css
@@ -9,8 +9,7 @@
   --paint-olive: #6a6906;
   --paint-yellow: #feff0b;
   --paint-light-green: #26ff04;
-  --paint-green: #afafaf;
-  /* --paint-dark-green: #072d2c; */
+  --paint-green: #106b06;
   --paint-blue: #1301fe;
   --paint-green-blue: #106868;
   --paint-light-blue: #22fdff;
