--- a/style/index.css
+++ b/style/index.css
@@ -66,6 +66,7 @@ button {
   left: 50%;
   width: 300px;
   transform: translate(-50%, -50%);
+  cursor: move;
 }
 
 /* cursor: close button */
@@ -111,6 +112,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  overflow: auto;
 }
 
 .todo-icon strong,
@@ -173,7 +175,7 @@ button {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 6vh;
+  /* height: 6vh; */
   padding: 3px;
   background-color: #c0c0c0;
   box-shadow: var(--bar-shadow);
@@ -243,4 +245,16 @@ button#date-time {
 #date-time h1 {
   font-size: 1.2em;
   font-weight: 500;
+}
+
+/* responsive */
+@media screen and (max-width: 768px) {
+  #taskbar button:nth-child(2) {
+    display: none;
+  }
+
+  .icon-group {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
