--- a/style/texteditor.css
+++ b/style/texteditor.css
@@ -26,13 +26,13 @@
   left: 0;
   right: 0;
   bottom: 0;
-  display: none;
+  /* display: none; */
   width: 100%;
   height: 100vh;
 }
 
 .editor-container.open {
-  display: block;
+  /* display: block; */
 }
 
 .lists {
