--- a/style/todo.css
+++ b/style/todo.css
@@ -22,13 +22,13 @@
   left: 0;
   right: 0;
   bottom: 0;
-  display: none;
+  /* display: none; */
   width: 100%;
   height: 100vh;
 }
 
 .todo-container.open {
-  display: block;
+  /* display: block; */
 }
 
 .todo-lists {
