--- a/style/todo.css
+++ b/style/todo.css
@@ -1,20 +1,3 @@
-/* Todo Icon */
-#todo {
-  margin: 15px;
-  cursor: pointer;
-}
-
-#todo strong::before {
-  content: "";
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  margin-left: 0;
-  margin-bottom: 0.5em;
-  background-image: url(../assets/write.png);
-  background-size: 50px 50px;
-}
-
 /* Todo List */
 .todo-container {
   position: fixed;
@@ -22,13 +5,13 @@
   left: 0;
   right: 0;
   bottom: 0;
-  /* display: none; */
+  display: none;
   width: 100%;
   height: 100vh;
 }
 
 .todo-container.open {
-  /* display: block; */
+  display: block;
 }
 
 .todo-lists {
