--- a/style/index.css
+++ b/style/index.css
@@ -124,7 +124,7 @@ button {
   width: 20px;
   height: 20px;
   margin-right: 0.5em;
-  background-image: url(../assets/windows.png);
+  background-image: url(../assets/images/windows.png);
   background-size: 20px 20px;
 }
 
@@ -134,7 +134,7 @@ button {
   width: 25px;
   height: 25px;
   margin-right: 1em;
-  background-image: url(../assets/windows_slanted.png);
+  background-image: url(../assets/images/windows_slanted.png);
   background-size: 25px 25px;
 }
 
@@ -143,7 +143,7 @@ button {
   display: inline-block;
   width: 22px;
   height: 22px;
-  background-image: url(../assets/time_date.png);
+  background-image: url(../assets/images/time_date.png);
   background-size: 22px 22px;
   margin-right: 1em;
 }
